# Game-Genre-Steam-Market-Analysis

./: README.md  pyproject.toml  steam_games_clean.csv
report/: _quarto.yml  report.html  report.qmd
src/apps/: data_visualizer.py  json_to_csv_converter.py  line_chart_visualizer.py  pickle_file_reader.py
src/data/: clean_data.json  popularnew_20250515.pkl
src/data/clean/: topsellers_20250518.json  topsellers_20250521.json  topsellers_20250524.json  topsellers_20250528.json
src/data/formatted_csv_files/: steam_topsellers_20250518.csv  steam_topsellers_20250521.csv  steam_topsellers_20250524.csv  steam_topsellers_20250528.csv
src/data/raw/: topsellers_20250518.pkl  topsellers_20250521.pkl  topsellers_20250524.pkl  topsellers_20250528.pkl
src/pickle_file_reader/: notes.txt  pickle_file_reader.py
