[tool.poetry]
name = "GenreAnalysis"
version = "0.1.0"
description = ""
authors = ["Josh Tarongoy"]
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
steamspypi = ">=1.1.1"
pandas = ">=2.2.3"
numpy = ">=2.2.5"
matplotlib = ">=3.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
